--- a/style.css
+++ b/style.css
@@ -2,10 +2,6 @@ th {
     text-align: left;
 }
 
-.bar {
-    width: 5px;
-    height: 100px;
-    display: inline-block;
-    background-color: blue;
-    margin: 2px;
+.bar:hover {
+    fill: brown;
 }
