--- a/style.css
+++ b/style.css
@@ -7,5 +7,9 @@ th {
 }
 
 .bar-graph {
-    margin: 30px;
+    margin: 30px 0 10px 30px;
+}
+
+.bar-graph-explanation-paragraph {
+    margin: 0 0 0 45px;
 }
