--- a/style.css
+++ b/style.css
@@ -13,3 +13,16 @@ th {
 .bar-graph-explanation-paragraph {
     margin: 0 0 0 45px;
 }
+
+div.tooltip {
+    position: absolute;
+    text-align: center;
+    width: 60px;
+    height: 16px;
+    padding: 2px;
+    font: 12px sans-serif;
+    background: lightsteelblue;
+    border: 0px;
+    border-radius: 8px;
+    pointer-events: none;
+}
